src/objects/FieloAlpha__Email__c.object
<CustomObject>
    <description>Object used for sending emails during the first step of registration. This is a Fielo’s internal object.</description>
    <fields>
        <fullName>FieloPLT__Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Email__c</fullName>
        <description>The email account used for sending emails to the members in the first step of registration.</description>
        <inlineHelpText>Enter the email account that will be used for communicating with members during the first step of registration.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member</label>
        <referenceTo>FieloPLT__Member__c</referenceTo>
        <relationshipLabel>Emails</relationshipLabel>
        <relationshipName>Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>FieloPLT__Program__c</referenceTo>
        <relationshipLabel>Emails</relationshipLabel>
        <relationshipName>Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__RecipientName__c</fullName>
        <label>Recipient Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Recommend</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Register</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Welcome</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <formula>FieloPLT__Program__r.FieloPLT__SiteURL__c + $Setup.FieloCMS__OrganizationSettings__c.FieloCMS__PackagePrefix__c + &apos;__Page?memberId=&apos; +  FieloPLT__Member__c + &apos;&amp;pageId=&apos; +  FieloPLT__Program__r.RegisterPage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <label>Email</label>
    <listViews>
        <fullName>FieloPLT__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EMAIL-{0000}</displayFormat>
        <label>Email Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>